--- a/templates/register.html
+++ b/templates/register.html
@@ -19,6 +19,10 @@
 						<input name="contact" type="text" class="form-control" id="contact" required placeholder="Enter contact info">
 					</div>
 					<div class="form-group">
+						<label for="email">Email</label>
+						<input name="email" type="email" class="form-control" id="email" required placeholder="Enter Email Id">
+					</div>
+					<div class="form-group">
 						<label for="passport">Passport Detail</label>
 						<input name="passport" type="text" class="form-control" id="passport" required placeholder="Enter passport detail">
 					</div>
